--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,91 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bem-Vindo"
+        android:id="@+id/textView" android:layout_gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#000000"/>
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:id="@+id/user"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentRight="true"
+        android:textSize="15dp"
+        android:textColor="#000000"/>
+
+    <Button
+        android:layout_width="170dp"
+        android:layout_height="40dp"
+        android:text="Entrar"
+        android:id="@+id/btnEntrar"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:layout_alignTop="@+id/btnRegister"
+        android:layout_alignParentRight="true"/>
+    <Button
+        android:layout_width="220dp"
+        android:layout_height="40dp"
+        android:text="Registrar"
+        android:id="@+id/btnRegister"
+        android:layout_below="@+id/pass"
+        android:layout_marginTop="10dp"
+        android:textSize="13dp"
+        android:textColor="#000000"
+        android:layout_toLeftOf="@+id/btnEntrar"/>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="56dp"
+        android:id="@+id/loginErrorMsg"
+        android:textColor="#000000"
+        android:layout_below="@+id/passres"
+        android:layout_alignParentLeft="true"/>
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:text="Usuário:"
+        android:id="@+id/textView2"
+        android:layout_alignTop="@+id/user"
+        android:layout_toLeftOf="@+id/textView"
+        android:textSize="15dp"
+        android:textColor="#000000"/>
+
+    <EditText
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/pass"
+        android:layout_below="@+id/user"
+        android:layout_alignLeft="@+id/user"
+        android:textSize="15dp"
+        android:textColor="#000000"/>
+
+    <TextView
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:text="Senha:"
+        android:id="@+id/pworda"
+        android:layout_alignBottom="@+id/pass"
+        android:layout_alignRight="@+id/textView2"
+        android:textSize="15dp"
+        android:textColor="#000000"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:text="Esqueceu sua senha ?"
+        android:id="@+id/btnEsqueceuSenha"
+        android:layout_below="@+id/btnEntrar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
+        android:textSize="13dp"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
