--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:layout_height="56dp"
         android:id="@+id/loginErrorMsg"
         android:textColor="#000000"
-        android:layout_below="@+id/passres"
+        android:layout_below="@+id/btnRegister"
         android:layout_alignParentLeft="true"/>
 
     <TextView
